# rules_python_gh1906

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  requirements.in  requirements_lock.txt  update_reqs.sh
